# HwAcceCodec

./: README.md
Media-Codec-Pipeline/: .gitmodules  CMakeLists.txt  README.md  README_CN.md
Media-Codec-Pipeline/HardCodec/: DecEncInterface.h
Media-Codec-Pipeline/HardCodec/Decoder/: AACDecoder.cpp  AACDecoder.h  DVPPDecoder.cpp  FFHardDecoder.cpp  FFSoftDecoder.cpp  HardDecoder.h  NVIDIADecoder.cpp
Media-Codec-Pipeline/HardCodec/Encoder/: AACEncoder.cpp  AACEncoder.h  H264DVPPEncoder.cpp  H264FFHardEncoder.cpp  H264FFSoftEncoder.cpp  H264HardEncoder.h  H264NVIDIAEncoder.cpp
Media-Codec-Pipeline/Media/MediaMuxer/: MediaMuxer.cpp
Media-Codec-Pipeline/Media/MediaReader/RtspReader/: rtsp_client_proxy.cpp
Media-Codec-Pipeline/Test/: main.cpp
Media-Codec-Pipeline/Warpper/: MediaWrapper.cpp  MediaWrapper.h
